[package]
name = "samp-bcrypt"
version = "0.3.3"
edition = "2018"
authors = ["Sreyas <Sreyassreelal@gmail.com>"]

[lib]
name = "samp_bcrypt"
crate-type = ["cdylib"]

[profile.release]
lto = true
panic = "abort"

[dependencies]
samp = {git="https://github.com/ZOTTCE/samp-rs/",branch="potential-fix"}
bcrypt = "0.2.1"
log = "0.4.6"
fern = "0.5.7"
threadpool = "1.7.1"